@@ -118,6 +118,12 @@
             <version>${langchain4j.betaversion}</version>
         </dependency>
         <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.14.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-weaviate</artifactId>
             <version>${langchain4j.betaversion}</version>
@@ -208,7 +214,7 @@
                 <version>2.12.4</version>
                 <inherited>false</inherited>
                 <configuration>
-                    <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m</argLine>
+                    <argLine>-Xms512m -Xmx1024m</argLine>
                     <disableXmlReport>false</disableXmlReport>
                     <parallel>false</parallel>
                     <testFailureIgnore>true</testFailureIgnore>
